# ttic-31040-final-project

./: .python-version  README.md  main.py  pyproject.toml  scratchpad.ipynb
docs/: writeup.md
src/: custom_dataclasses.py  custom_types.py  instance_detectors.py  utils.py
tests/: test_pytest.py
