[tool.poetry]
authors = ["sbarrios93 <sbarrios93@gmail.com>"]
description = ""
name = "Object recognition - TTIC 31040 Final Project UChicago"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.5.1"
mypy = "^0.941"
opencv-python = "^4.5.5"
python = "^3.9 <=3.10"
click = "^8.0.4"
rich = "^12.0.0"
rich-click = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipykernel = "^6.9.1"
mypy = "^0.941"
prospector = "^1.7.7"
pylama = "^8.3.8"
pytest = "^7.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
